fix header image and spacing

--- a/style.scss
+++ b/style.scss
@@ -843,20 +843,18 @@ img.wp-smiley,
 
 .site-header {
 	position: relative;
-    background: url(images/GBC-Queensland-header.jpg) no-repeat center center / cover;
-
 }
 
 .site-header .home-link {
 	display: block;
 	margin: 0 auto;
 	max-width: 1080px;
-	min-height: 230px;
 	padding: 0 20px;
 	text-decoration: none;
 	width: 100%;
     color: $menu-background;
     text-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+    background: url(images/GBC-Queensland-header.jpg) no-repeat center center / cover;
 }
 
 .site-title {
@@ -864,7 +862,9 @@ img.wp-smiley,
 	font-weight: bold;
 	line-height: 1;
 	margin: 0;
-	padding: 58px 0 10px;
+
+    @media screen and (min-width: 768px) { padding: 58px 0 10px; }
+    @media screen and (max-width: 767px) { padding: 28px 0 10px; }
 
     &:hover { text-decoration: underline; }
 
@@ -874,6 +874,7 @@ img.wp-smiley,
 	font: 400 italic 24px $header-font-stack-secondary;
     text-transform: inherit;
 	margin: 0;
+    padding-bottom: 1em;
 }
 
 
